Fix spacing, lose custom padding on control rows

--- a/src/smitheme/phoenix/static/phoenix.css
+++ b/src/smitheme/phoenix/static/phoenix.css
@@ -161,7 +161,7 @@ a:hover {
 .middleground .transporter a {
   display: inline-block;
   padding: 0 10px;
-  line-height: 21px;
+  line-height: 20px;
   border: 1px #777 solid;
   border-radius: 5px;
   -moz-border-radius: 5px;
@@ -303,7 +303,6 @@ table.listing td.top, table.listing th.top {
 }
 
 table.listing tr.top-controls td {
-  padding: 0.2em 0.3em 0.1em;
   border-bottom: 1px solid #ccc;
 }
 
@@ -317,7 +316,6 @@ table.listing tr.inter-controls td {
 }
 
 table.listing tr.controls td {
-  padding: 0.3em 0.2em 0.2em;
   border-top: 1px solid #ededed;
 }
 
@@ -533,7 +531,7 @@ td.element select.field, select.store {
 }
 
 input[type="button"], input[type="submit"], button {
-  height:1.9em;
+  height:1.7em;
 }
 
 input[type="submit"] {
